--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,47 @@
-node_modules
-.github/*
-.cursor/*
-.next/*
-.next*
-.vercel/*
-.vscode/*
-.env.example
-.env.staging
-.env.production
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Environment variables
+.env
+.env.local
 .env.development
 .env.test
-.env.local
+.env.production
+.env.staging
+.env.example
+
+# IDE
+.vscode/
+.cursor/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Vercel
+.vercel/
+
+# GitHub
+.github/
