--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -7,6 +7,11 @@ on:
       - "supabase/migrations/**"
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   migrate-production:
     name: Run Production Migrations
@@ -45,6 +50,8 @@ jobs:
         run: |
           echo "🚀 Running production migrations..."
           npm run migrate:prod
+          echo "⚠️  Note: Manual migration verification may be required"
+          echo "   Please check Supabase Dashboard to ensure all migrations completed successfully"
 
       - name: Verify migrations
         env:
@@ -54,19 +61,35 @@ jobs:
         run: |
           echo "✅ Verifying migration status..."
           npm run db:status
+          echo "🎉 Migration workflow completed successfully!"
+
+      - name: Notify on success
+        if: success()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            console.log('✅ Production migrations completed successfully');
+            console.log(`📋 Workflow: ${context.workflow}`);
+            console.log(`🔗 Run URL: ${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`);
 
       - name: Notify on failure
         if: failure()
         uses: actions/github-script@v7
         with:
           script: |
-            github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: '🚨 Production Migration Failed',
-              body: `Migration failed in workflow run: ${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
-              labels: ['bug', 'database', 'urgent']
-            })
+            try {
+              await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: '🚨 Production Migration Failed',
+                body: `Migration failed in workflow run: ${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}\n\n**Error Details:**\n- Workflow: ${context.workflow}\n- Job: ${context.job}\n- Commit: ${context.sha}\n- Branch: ${context.ref}\n\nPlease check the workflow logs and fix the migration issues.`,
+                labels: ['bug', 'database', 'urgent']
+              });
+              console.log('✅ Issue created successfully');
+            } catch (error) {
+              console.error('❌ Failed to create issue:', error.message);
+              console.log('Migration failed but issue creation also failed. Check workflow logs manually.');
+            }
 
   # Optional: Staging environment migrations
   migrate-staging:
@@ -98,4 +121,3 @@ jobs:
           echo "🧪 Running staging migrations..."
           npm run migrate
           npm run db:status
-
