attempt to resolve prod table issue

--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -3,7 +3,7 @@ name: Database Migrations
 on:
   push:
     branches: [main]
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch: # Allow manual triggerr
 
 permissions:
   contents: read
