--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "db:cli": "npx supabase",
     "db:link:dev": "npx supabase link --project-ref kdoeomzqurcggvywqvdn",
     "db:link:prod": "npx supabase link --project-ref sxveqitmcfrhmagycahx",
-    "db:push:dev": "npx supabase db push --project-ref kdoeomzqurcggvywqvdn",
-    "db:push:prod": "npx supabase db push --project-ref sxveqitmcfrhmagycahx",
+    "db:push:dev": "npx supabase link --project-ref kdoeomzqurcggvywqvdn && npx supabase db push",
+    "db:push:prod": "npx supabase link --project-ref sxveqitmcfrhmagycahx && npx supabase db push",
     "db:types:dev": "npx supabase gen types typescript --project-id kdoeomzqurcggvywqvdn > src/types/database.ts",
     "db:types:prod": "npx supabase gen types typescript --project-id sxveqitmcfrhmagycahx > src/types/database.ts",
     "db:diff": "npx supabase db diff",
