--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -2,7 +2,7 @@
 # https://supabase.com/docs/guides/local-development/cli/config
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "ethniqrootz-nextjs"
+project_id = "sellexa-nextjs"
 
 [api]
 enabled = true
@@ -195,15 +195,15 @@ otp_expiry = 3600
 
 # Custom email templates
 [auth.email.template.confirmation]
-subject = "Welcome to EthniqRootz - Confirm Your Email"
+subject = "Welcome to Sellexa - Confirm Your Email"
 content_path = "./supabase/templates/confirmation.html"
 
 [auth.email.template.recovery]
-subject = "Reset Your EthniqRootz Password"
+subject = "Reset Your Sellexa Password"
 content_path = "./supabase/templates/recovery.html"
 
 [auth.email.template.magic_link]
-subject = "Sign in to EthniqRootz"
+subject = "Sign in to Sellexa"
 content_path = "./supabase/templates/magic_link.html"
 
 # [auth.email.template.invite]
